<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
		android:orientation="vertical"
		android:layout_width="fill_parent" 
		android:layout_height="fill_parent"
		android:id="@+id/form">
		
<LinearLayout 
		android:orientation="vertical"
		android:layout_width="fill_parent" 
		android:layout_height="fill_parent">
	
	<TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="5dp"
	        android:text="@string/title" />	
	<EditText android:id="@+id/title"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="5dp" 
	        android:layout_width="fill_parent"
	        android:singleLine="true"
	        android:imeOptions="actionNext"/>
	<TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="5dp"
	        android:text="@string/details" />	
	<EditText android:id="@+id/details"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="5dp" 
	        android:layout_width="fill_parent"
	        android:singleLine="true"
	        android:imeOptions="actionNext"/>
	<TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="5dp"
	        android:text="@string/instructions" />	
   
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="1"
    android:id="@+id/person1">
    <TableRow>
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/email" />
	    <AutoCompleteTextView android:id="@+id/enterName1"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="5dp"
	        android:singleLine="true"
	        android:imeOptions="actionNext"/>
	</TableRow>	
	<TableRow>
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/amount" />
	    <EditText android:id="@+id/enterAmount1"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="5dp" 
	        android:layout_width="86dp"
	        android:numeric="integer|decimal"
	        android:imeOptions="actionNext"/>>
	</TableRow>
</TableLayout>
	    
	    
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="1"
    android:id="@+id/person2">
    <TableRow>
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/email" />
	    <AutoCompleteTextView android:id="@+id/enterName2"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="5dp"
	        android:singleLine="true"
	        android:imeOptions="actionNext"/>
	</TableRow>
	
	<TableRow>
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/amount" />
	    <EditText android:id="@+id/enterAmount2"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="5dp" 
	        android:layout_width="86dp"
	        android:numeric="integer|decimal"
	        android:imeOptions="actionNext"/>
	</TableRow>
</TableLayout>
	
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="1"
    android:id="@+id/person3">
    <TableRow>
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/email" />
	    <AutoCompleteTextView android:id="@+id/enterName3"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="5dp"
	        android:singleLine="true"
	        android:imeOptions="actionNext"/>
	</TableRow>
	
	<TableRow>
	    android:orientation="horizontal"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"
	    android:padding="5dp">
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/amount" />
	    <EditText android:id="@+id/enterAmount3"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="5dp" 
	        android:layout_width="86dp"
	        android:numeric="integer|decimal"
	        android:imeOptions="actionNext"/>
	</TableRow> 
</TableLayout>
	
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="1"
    android:id="@+id/person4">
    <TableRow> 
	    android:orientation="horizontal"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"
	    android:padding="5dp">
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/email" />
        <AutoCompleteTextView android:id="@+id/enterName4"
        	android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="5dp"
	        android:singleLine="true"
	        android:imeOptions="actionNext"/>
	</TableRow>
	
	<TableRow>
	    android:orientation="horizontal"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"
	    android:padding="5dp">
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/amount" />
	    <EditText android:id="@+id/enterAmount4"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="5dp" 
	        android:layout_width="86dp"
	        android:numeric="integer|decimal"
	        android:imeOptions="actionDone"/>
	</TableRow>
</TableLayout>
	
	    
	    
	<LinearLayout 
	    android:orientation="horizontal"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"
	    android:padding="5dp">
		<Button 
		android:layout_height="wrap_content" 
		android:layout_width="wrap_content" 
		android:id="@+id/submit" 
		android:text="@string/submit"></Button>
		<Button 
		android:layout_height="wrap_content" 
		android:layout_width="wrap_content" 
		android:id="@+id/clear" 
		android:text="@string/clear"></Button>
		<Button 
		android:layout_height="wrap_content" 
		android:layout_width="wrap_content" 
		android:id="@+id/add" 
		android:text="@string/add"></Button>
	</LinearLayout>
</LinearLayout>
</ScrollView>